--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>dain ryoo</title>
+  <title>Da-In Ryoo | Home</title>
   <meta name="description" content="Portfolio site for Da-In Ryoo">
-  <!--<link rel="icon" href="img/icon.png" type="image/png">-->
+  <link rel="icon" href="misc/smiley.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="misc/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="functions.js"></script>
+  <script type="text/javascript" src="misc/functions.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -17,11 +18,16 @@
 
   
   <div class="mainContent">
-    <object type="image/svg+xml" data="img/logoSVG.svg">DAIN RYOO</object>
+    <object type="image/svg+xml" data="misc/logoSVG.svg">DAIN RYOO</object>
     <h2>programmer + designer + artist</h2>
-    <button class="navButton" type="button" onclick="location.href='portfolio.html'">portfolio</button>
+    <div class="subContent">
+      <p>2nd Year CS Student seeking front-end or UI/UX internship</p>
+    </div>
+    <!--<button class="navButton" type="button" onclick="location.href='portfolio.html'">portfolio</button>-->
+    <button class="navButton" type="button" onclick="alert('Coming Soon!');">portfolio</button>
     <button class="navButton" type="button" onclick="location.href='resume.pdf'">resume</button>
-    <button class="navButton" type="button" onclick="location.href='about.html'">about</button>
+    <!--<button class="navButton" type="button" onclick="location.href='about.html'">about</button>-->
+    <button class="navButton" type="button" onclick="alert('Coming Soon!');">about</button>
   </div>
 
     
