Added Portfolio page
Now has basic Portfolio page, header for Portfolio and soon to come
About page, and calmer color scheme

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="misc/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="misc/functions.js"></script>
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -23,11 +24,10 @@
     <div class="subContent">
       <p>2nd Year CS Student seeking front-end or UI/UX internship</p>
     </div>
-    <!--<button class="navButton" type="button" onclick="location.href='portfolio.html'">portfolio</button>-->
-    <button class="navButton" type="button" onclick="alert('Coming Soon!');">portfolio</button>
+    <button class="navButton" type="button" onclick="location.href='portfolio.html'">portfolio</button>
     <button class="navButton" type="button" onclick="location.href='resume.pdf'">resume</button>
-    <!--<button class="navButton" type="button" onclick="location.href='about.html'">about</button>-->
-    <button class="navButton" type="button" onclick="alert('Coming Soon!');">about</button>
+    <button class="navButton" type="button" onclick="location.href='about.html'">about</button>
+    <!--<button class="navButton" type="button" onclick="alert('Coming Soon!');">about</button>-->
   </div>
 
     
