--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
     <button class="navButton" type="button" onclick="location.href='portfolio.html'">portfolio</button>
     <button class="navButton" type="button" onclick="location.href='resume.pdf'">resume</button>
-    <button class="navButton" type="button" onclick="location.href='about.html'">about</button>
-    <!--<button class="navButton" type="button" onclick="alert('Coming Soon!');">about</button>-->
+<!--     <button class="navButton" type="button" onclick="location.href='about.html'">about</button> -->
+    <button class="navButton" type="button" onclick="alert('Coming Soon!');">about</button>
   </div>
 
     
