Minor aesthetic changes
Fixed some header padding issues

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <body>
 
   <div class="header">
-    <object type="image/svg+xml" data="misc/logoSVG2.svg">DAIN RYOO</object>
+    <object type="image/svg+xml" data="misc/logoSVG2.svg" onclick="location.href='index.html'">DAIN RYOO</object>
     <div class="row">
       <div class="col-sm-4"></div>
       <div class="col-xs-12 col-sm-4">
@@ -27,7 +27,6 @@
       </div>
       <div class="col-sm-4"></div>
     </div>
-    
   </div>
   
   <div class="container-fluid projectContainer">
