Update meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="LkBWVw8Tg5SovEr2HF7ks0wTcKDegFW6Th53fRL0nCc" />
 
   <title>Da-In Ryoo</title>
   <meta name="description" content="I'm a Computer Science student interested in UX engineering and front-end web development.">
